# ICE-BA

./: .Old.cpp.swp  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Old.cpp  configure-cmake.sh
App/: CMakeLists.txt  EuRoC_test.cpp  InputSequence.h  RunBackend.cpp  run_backend.cpp
Backend/: CMakeLists.txt
Backend/BundleAdjustment/: .LocalBundleAdjustor.h.swp  GlobalBundleAdjustor.cpp  GlobalBundleAdjustor.h  GlobalBundleAdjustorDL.cpp  GlobalBundleAdjustorDebug.cpp  GlobalBundleAdjustorGN.cpp  GlobalBundleAdjustorIO.cpp  LocalBundleAdjustor.cpp  LocalBundleAdjustor.h  LocalBundleAdjustorDL.cpp  LocalBundleAdjustorDebug.cpp  LocalBundleAdjustorGN.cpp  LocalBundleAdjustorIO.cpp
Backend/Geometry/: BoundingBox.h  Camera.cpp  Camera.h  CameraPrior.cpp  CameraPrior.h  CameraTrajectory.h  Depth.cpp  Depth.h  IMU.cpp  IMU.h  Intrinsic.cpp  Intrinsic.h  M-Estimator.h  Point.h  Rigid.h  Rotation.h  Similarity.h
Backend/IBA/: IBA.cpp  IBA.h  IBA_config.h  IBA_datatype.h  IBA_internal.h  Parameter.cpp  Parameter.h  stdafx.h  targetver.h
Backend/LinearAlgebra/: .MatrixMxN.h.swp  LinearSystem.h  Matrix2x2.h  Matrix2x3.h  Matrix2x4.h  Matrix2x6.h  Matrix2x7.h  Matrix2x8.h  Matrix3x2.h  Matrix3x3.h  Matrix3x4.h  Matrix3x6.h  Matrix3x7.h  Matrix3x8.h  Matrix4x4.h  Matrix6x6.h  Matrix6x7.h  Matrix8x8.h  Matrix9x9.h  MatrixMxN.h  Vector12.h  Vector2.h  Vector3.h  Vector4.h  Vector6.h  Vector7.h  Vector8.h  Vector9.h  VectorN.h
Backend/Map/: Feature.cpp  Feature.h  Frame.h  GlobalMap.cpp  GlobalMap.h  LocalMap.cpp  LocalMap.h
Backend/Utility/: AlignedMatrix.h  AlignedVector.h  Candidate.h  Configurator.h  FillMap.h  MultiThread.cpp  MultiThread.h  SIMD.h  Table.h  Timer.h  Utility.cpp  Utility.h  simd_sse_neon.h
Backend/Visualization/: Arcball.h  EventHandler.h  Frustrum.h  Keyboard.h  TextureGL.h  UtilityWM.h  Viewer.cpp  Viewer.h  ViewerIBA.cpp  ViewerIBA.h  ViewerIBADraw.cpp  ViewerIBAIO.cpp
Documentation/: Untitled Diagram.drawio
Frontend/: CMakeLists.txt  CameraBase.cpp  ORBextractor.h  basic_datatype.h  feature_utils.h  iba_helper.h  image_utils.h  param.h  patch_score.h  plotting_utils.cpp  plotting_utils.h  pose_viewer.h  rotation.h  shared_queue.h  timer.h  xp_quaternion.h  xppyramid.cpp
cmake/: FindCVD.cmake  FindEigen.cmake  FindGFlags.cmake
